FInal update suraj niyogi

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -4,6 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AHD INDIA</title>
 
+<meta charset="UTF-8">
+<meta name="description" content="">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <!-- external cdn links for styling -->
 <!-- bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -11,9 +16,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 <!-- fontawsome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-
-<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
-<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
 
 <!-- local css -->
 <link rel="stylesheet" href="assets/css/customeStyle.css">
@@ -24,7 +26,7 @@
 
 <body>
   <!-- header stip -->
-  <div class="socialMedia col-12">
+  <div class="socialMedia socialMediaCont col-12">
     <a href="" class="topIconLink"><i class="far fa-envelope topIcon" title="Send Us A Mail"></i></a>
     <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
     <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
@@ -33,12 +35,12 @@
     <div class="navDIv col-12 float-right">
       <!-- Classy Menu -->
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand stickyLogo" href="#"><img style="width: 20%;" src="./assets/img/logo.png" alt=""></a>
+        <a class="navbar-brand col-8 col-lg-2 stickyLogo" href="#"><img style="width: 70%;" src="./assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+          <ul class="navbar-nav mr-auto col-lg-4">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
             </li>
@@ -66,7 +68,7 @@
         <div class="headerText py-5 text-center">
           <h4><u>Connect With Us</u></h4>
         </div>
-        <div class="col-6 text-center contactBody col-xs-12">
+        <div class="col-12 col-lg-6 text-center contactBody col-xs-12">
           <div class="bodyText text-left">
             <h5 class="mb-5">
               <strong>For any queries, you can reach to us directly.</strong>
@@ -91,7 +93,7 @@
 
   <footer>
       <div class="col-4 footerNav">
-      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL US</a>
     </div>
     <div class="col-4  footerNav">
       <a href="index.html">HOME</a>
