--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AHD INDIA</title>
+<meta charset="UTF-8">
+<meta name="description" content="">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 <!-- external cdn links for styling -->
 <!-- bootstrap -->
@@ -11,10 +15,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
 <!-- fontawsome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
-
-<link rel="stylesheet" href="./assets/css/owl.carousel.min.css">
-<link rel="stylesheet" href="./assets/css/owl.theme.default.min.css">
-
 <!-- local css -->
 <link rel="stylesheet" href="assets/css/customeStyle.css">
 <link rel="stylesheet" href="assets/css/header.css">
@@ -29,33 +29,36 @@
     <a href="" class="topIconLink"><i class="fas fa-map-marker-alt topIcon" title="Find Us Here"></i></a>
     <a href="" class="topIconLink"><i class="fas fa-phone-alt topIcon" title="Call Us"></i></a>
   </div>
+
   <div style="background-color: darkcyan;" class="mainDiv aboutSticky col-12">
     <div class="navDIv col-12 float-right">
       <!-- Classy Menu -->
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand stickyLogo" href="#"><img style="width: 20%;" src="./assets/img/logo.png" alt=""></a>
+        <a class="navbar-brand col-8 col-lg-2 stickyLogo" href="#"><img style="width: 70%;" src="./assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+          <ul class="navbar-nav mr-auto col-lg-4">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contact_Us.html">Contant Us</a>
             </li>
             <li class="nav-item active">
               <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ServicesAm.html">Services</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contact_Us.html">Contact Us</a>
-            </li>
+            
           </ul>
         </div>
       </nav>
     </div>
   </div>
+
   <!-- header stip -->
   <!-- projects -->
   <div class="nextSections" id="projects">
@@ -72,33 +75,8 @@
           <p>Here is the list of some of the projects completed by AHD INDIA</p>
         </div>
         <section class="airportSider">
-          <!-- Airport Slider Area -->
-          <!-- <div class="owl-carousel">
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-          </div> -->
           <div class="prt">
-            <!-- <div class="prtImg">
-              <img src="./assets/img/canopy2.png" alt="">
-            </div>
-            <div class="prtImg">
-              <img src="./assets/img/canopy4.jpg" alt="">
-            </div> -->
-            <div class="col-6 float-left">
+            <div class="col-4 float-left">
               <div class="col-12 container">
                 <ul class=" text-center">
                   <li class="airClass">Amritsar Airport</li>
@@ -108,17 +86,23 @@
                  </ul>
               </div>
             </div>
-            <div class="col-6 float-right">
+            <div class="col-4 float-left">
               <div class="col-12 container">
-                <ul class="text-center">
+                <ul class=" text-center">
+                  <li class="airClass">Trichy Airport</li>
+                  <li class="airClass">Udaipur Airport</li>
                   <li class="airClass">Chennai Airport</li>
                   <li class="airClass">Jaipur Airport</li>
+                 </ul>
+              </div>
+            </div>
+            <div class="col-4 float-right">
+              <div class="col-12 container">
+                <ul class="text-center">
                   <li class="airClass">Jammu Airport</li>
                   <li class="airClass">Kolkata Airport</li>
                   <li class="airClass">Lucknow Airport</li>
                   <li class="airClass">Srinagar Airport</li>
-                  <li class="airClass">Trichy Airport</li>
-                  <li class="airClass">Udaipur Airport</li>
                 </ul>
               </div>
             </div>
@@ -130,7 +114,7 @@
 
 <footer>
   <div class="col-4 footerNav">
-  <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+  <a href="href:mailto:amitkumar2234@gmail.com">EMAIL US</a>
 </div>
 <div class="col-4  footerNav">
   <a href="index.html">HOME</a>
