--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AHD INDIA</title>
 
+<meta charset="UTF-8">
+<meta name="description" content="">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 <!-- external cdn links for styling -->
 <!-- bootstrap -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,7 +22,7 @@
 
 <!-- local css -->
 <link rel="stylesheet" href="assets/css/customeStyle.css">
-<link rel="stylesheet" href="assets/css/header.css">
+<!-- <link rel="stylesheet" href="assets/css/header.css"> -->
 <link rel="stylesheet" href="assets/css/responsive.css">
 
 </head>
@@ -33,12 +38,12 @@
     <div class="navDIv col-12 float-right">
       <!-- Classy Menu -->
       <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand stickyLogo" href="#"><img src="./assets/img/logo.png" alt=""></a>
+        <a class="navbar-brand stickyLogo col-8" href="#"><img src="./assets/img/logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <ul class="navbar-nav mr-auto col-12 mt-2 mt-lg-0">
+          <ul class="navbar-nav mr-auto col- mt-2 mt-lg-0">
             <li class="nav-item active">
               <a class="nav-link" href="#aboutUs">About Us</a>
             </li>
@@ -62,11 +67,6 @@
   <header>
     <div class="bgSlider" id="top">
       <div class="bgLyr">
-
-        <!-- <div class="logo">
-          <img src="assets/img/logo.png" alt="logo.png" id="logo">
-        </div> -->
-
         <h1 class="tagLine col-12 text-center">Welcome to AHD India. </h1>
       </div>
     </div>
@@ -79,8 +79,8 @@
       <div class="headerText text-center pb-5">
         <h4><u>AHD INDIA</u></h4>
       </div>
-      <div class="pt-5">
-        <div class="col-6 col-xs-12 float-left">
+      <div class="pt-5 aboutBodu">
+        <div class="col-lg-6 col-xs-12 Welcome float-left">
           <div class="headerText">
             <h4>Welcome to AHD India.</h4>
           </div>
@@ -92,7 +92,7 @@
             <a href="./aboutus.html" class="readBtn">Read More</a>
           </div>
         </div>
-        <div class="col-6 col-xs-12 float-left" style="height: 18em;overflow: hidden;;">
+        <div class="col-lg-6 col-xs-12 float-left" style="height: 18em;overflow: hidden;;">
           <div id="slider">
             <figure>
               <img src="./assets/img/canopy1.jpg" alt>
@@ -122,32 +122,7 @@
           <p>Here is the list of some of the projects completed by AHD INDIA</p>
         </div>
         <section class="airportSider">
-          <!-- Airport Slider Area -->
-          <!-- <div class="owl-carousel">
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-            <div class="item">
-              <img src="./assets/img/canopy1.jpg" alt="" class="img-fluid">
-            </div>
-          </div> -->
           <div class="prt">
-            <!-- <div class="prtImg">
-              <img src="./assets/img/canopy2.png" alt="">
-            </div>
-            <div class="prtImg">
-              <img src="./assets/img/canopy4.jpg" alt="">
-            </div> -->
             <div class="col-6 float-left">
               <div class="col-12 container">
                 <ul class=" text-center">
@@ -155,6 +130,8 @@
                   <li class="airClass">Bengaluru Airport</li>
                   <li class="airClass">Bhuvneshwar Airport</li>
                   <li class="airClass">Chandigarh Airport</li>
+                  <li class="airClass">Trichy Airport</li>
+                  <li class="airClass">Udaipur Airport</li>
                  </ul>
               </div>
             </div>
@@ -167,11 +144,10 @@
                   <li class="airClass">Kolkata Airport</li>
                   <li class="airClass">Lucknow Airport</li>
                   <li class="airClass">Srinagar Airport</li>
-                  <li class="airClass">Trichy Airport</li>
-                  <li class="airClass">Udaipur Airport</li>
                 </ul>
               </div>
             </div>
+            <a href="./projects.html" class="readBtn">Learn More</a>
           </div>
         </section>
       </div>
@@ -185,7 +161,7 @@
         <div class="headerText py-5 text-center">
           <h4><u>Connect With Us</u></h4>
         </div>
-        <div class="col-6 text-center contactBody col-xs-12">
+        <div class="col-lg-6 text-center contactBody col-xs-12">
           <div class="bodyText text-left">
             <h5 class="mb-5">
               <strong>For any queries, you can reach to us directly.</strong>
@@ -201,7 +177,7 @@
             </div>
           </div>
         </div>
-        <div class="col-6 col-xs-12 contactBody">
+        <div class="col-lg-6 col-xs-12 cont contactBody">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3507.365295657015!2d77.01910071455522!3d28.468543582482763!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d19d299b0b5cb%3A0xa81f3fb482215b96!2sLink%20Rd%2C%20Bhim%20Nagar%2C%20Sector%206%2C%20Gurugram%2C%20Haryana%20122006!5e0!3m2!1sen!2sin!4v1589820129008!5m2!1sen!2sin" width="600" height="272" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
@@ -210,7 +186,7 @@
 
   <footer>
       <div class="col-4 footerNav">
-      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL Us</a>
+      <a href="href:mailto:amitkumar2234@gmail.com">EMAIL US</a>
     </div>
     <div class="col-4  footerNav">
       <a href="index.html">HOME</a>
